--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<p>
 						<ol><li><a href="#">Administración de todo los repositorios mostrando todo el contenido</a><br><br></li>
 						<li><a href="#">Permite Monitorear cambios en el Proyecto.</a> <br><br></li>
-						<li><a href="#">Sincroniza todos los Repositorios e interactua con una gran comunidad</a> <br><br></li>
+						<li><a href="#">Permite estar al dia con un servicio de noticias integrado para todas las organizaciones, seguidores y repositorios</a> <br><br></li>
 						<li><a href="#">Interactua con miembros del equipo a través de discusiones.</a> 
 						</li></ol>
 						<br>
